Refactor everything to be just in the owasp.benchmark project.